--- a/mic-face/p5test.html
+++ b/mic-face/p5test.html
@@ -2,8 +2,8 @@
 <html>
 	<head>
 		<script src="http://code.jquery.com/jquery-3.1.1.min.js"></script>
-		<script src="p5.min.js"></script>
-		<script src="addons/p5.sound.js"></script>
+		<script src="../p5/p5.min.js"></script>
+		<script src="../p5/addons/p5.sound.js"></script>
 		<script src="sketch.js"></script>
 		
 	</head>
